# lidar_camera_calibration

./: README.md
open3D_visualization/: .visualize.py.swp  visualize.py
source/blackflys_camera_capture/Acquisition/: Acquisition.cpp  CMakeLists.txt
source/blackflys_camera_capture/Acquisition/cmake/Modules/: FindSpinnaker.cmake
source/lidar_based/visualize/: visualize.py
source/open3D_visualization/: visualize.py
source/sync/: .sync.cpp.swo  .sync.cpp.swp  sync  sync.cpp  test.txt  test2.txt
source/velodyne_capture/: CMakeLists.txt  main.cpp
source/write_to_bag/: to_bag.py
source/write_to_bag/pcl_env/: pip-selfcheck.json
source/write_to_bag/pcl_env/local/: bin  include  lib
sync/: sync.cpp
write_to_bag/: to_bag.py
